2010-06-09  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Fix typo in fast/lists/ordered-list-with-no-ol-tag.html
        https://bugs.webkit.org/show_bug.cgi?id=40391

        This test contains an untermianted end tag, which parses differently in
        the HTML5 parser than in the legacy parser.  Having read the bug that
        caused this test to be added, making the text valid HTML seems to
        respect the intent of the test (which is about numbering).

        As discussed in other patches, we have the parsing behavior covered in
        parsing tests.

        * fast/lists/ordered-list-with-no-ol-tag.html:

2010-06-09  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Make invalid comment in fast/css/word-space-extra.html really invalid
        https://bugs.webkit.org/show_bug.cgi?id=40388

        This test tries to have a comment inside a comment.  To make that work
        in the old parser, the author added a space between the -- and the >.
        However, that's a valid end-of-comment in the new parser.  I've change
        the space to a * to really make it not a valid end of comment.

        * fast/css/word-space-extra.html:

2010-06-09  Adam Barth  <abarth@webkit.org>

        Reviewed by Eric Seidel.

        Test how XML directives get attached to the DOM
        https://bugs.webkit.org/show_bug.cgi?id=40384

        In the old parser, the XML directive doesn't get added to the DOM.  In
        new parser (and in Minefield), it gets added as a comment, which shows
        up in this test.

        This behavior was tested more obliquely by
        fast/css-generated-content/hover-style-change.html in some
        DumpRenderTree output.  I've removed that coverage from the CSS test
        and moved it to a new parser test that can actually be run in other
        browsers.

        * fast/css-generated-content/hover-style-change.html: